tests/errors/syn_for1.java
public class syn_for1{
public static void main(String[] args){
 ( ; ; ) { }
}
}